--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,18 @@ dependencies = [
   "pydantic>=2.0",
   "pylast>=5.5.0",
   "fastapi>=0.115.12",
+  "gunicorn>=23.0.0",
+  "uvicorn>=0.34.2",
 ]
 
 [project.optional-dependencies]
-
 dev = [
   "ruff",
   "isort",
-  "uvicorn"
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.ruff]
 target-version = "py312"
