--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-build-backend = "setuptools.build_meta"
-requires = ["setuptools", "wheel"]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "plex_lastfm_now_playing"
@@ -22,9 +22,6 @@ dev = [
   "ruff",
   "isort",
 ]
-
-[tool.setuptools.packages.find]
-where = ["src"]
 
 [tool.ruff]
 target-version = "py312"
@@ -101,5 +98,10 @@ select = [
 
 [ruff.lint.pydocstyle]
 convention = "google"
+
+[dependency-groups]
+dev = [
+    "hatchling>=1.27.0",
+]
 
 
