fix(deps): forgot pydantic-settings dependency

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,10 +24,10 @@ jobs:
       - name: Set up QEMU (for multi-platform builds)
         uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx (enables more advanced build features)
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry (GHCR)
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
