--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "fastapi>=0.115.12",
   "gunicorn>=23.0.0",
   "uvicorn>=0.34.2",
+  "pydantic-settings>=2.9.1",
 ]
 
 [project.optional-dependencies]
