--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires-python = ">=3.12"
 dependencies = [
   "pydantic>=2.0",
   "pylast>=5.5.0",
-  "fastapi>=0.115.12",
+  "fastapi[standard]>=0.115.12",
   "gunicorn>=23.0.0",
   "uvicorn>=0.34.2",
   "pydantic-settings>=2.9.1",
