--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,15 @@ select = [
   "YTT", # flake8-2020
 ]
 
+ignore = [
+  "D203",
+  "D212",
+  "COM812",
+  "SIM108", # use ternaroy operator but this makes it less readable to me
+  "ANN101", # Type hinting self is very stupid
+  "ISC001", # Conflicts with ruff's own formatter
+]
+
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"] # module imported but unused
 "docs/*" = [
@@ -99,6 +108,9 @@ select = [
   "S101", # Use of `assert` detected
   "PLR2004", # Magic value used in comparison, consider replacing * with a constant variable
 ]
+"src/plex_lastfm_now_playing/models.py" = [
+  "N815", # Plex uses camel case
+]
 
 [ruff.lint.pydocstyle]
 convention = "google"
@@ -107,5 +119,3 @@ convention = "google"
 dev = [
     "hatchling>=1.27.0",
 ]
-
-
