--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -35,6 +35,7 @@ jobs:
       with:
         path: |
           ~/.cache/uv
+          .venv
           ~/.uv
         key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml') }}
         restore-keys: |
@@ -42,6 +43,8 @@ jobs:
 
     - name: Install dependencies
       run: |
+        uv venv
+        source .venv/bin/activate
         uv pip install -e .
         uv pip install -e ".[dev]"
 
