--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,16 @@ dependencies = [
   "pydantic>=2.0",
   "pylast>=5.5.0",
   "fastapi[standard]>=0.115.12",
-  "gunicorn>=23.0.0",
   "uvicorn>=0.34.2",
   "pydantic-settings>=2.9.1",
-  "pytest-timeout>=2.4.0",
 ]
 
 [project.optional-dependencies]
 dev = [
   "ruff",
   "isort",
+  "pytest-timeout>=2.4.0",
+  "pytest"
 ]
 
 [tool.hatch.build.targets.wheel]
