--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -50,14 +50,7 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        .venv/bin/pytest tests/ -v --cov=plex_lastfm_now_playing --cov-report=xml
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: false
-        token: ${{ secrets.CODECOV_TOKEN }}
+        .venv/bin/pytest tests/ -v
 
     - name: Run linting
       run: |
