--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -48,11 +48,17 @@ jobs:
         uv pip install -e .
         uv pip install -e ".[dev]"
 
-    - name: Run tests with coverage
+    - name: Run tests
       run: |
         .venv/bin/pytest tests/ -v
 
-    - name: Run linting
+    - name: Run ruff linting
       run: |
-        .venv/bin/ruff check --fix .
+        source .venv/bin/activate
+        .venv/bin/ruff config
+        .venv/bin/ruff check .
+
+    - name: Run isort separately
+      run: |
+        source .venv/bin/activate
         .venv/bin/isort --check --diff .
